Update 006 Optimizing BigQuery for Cost and Performance v1.5

--- a/Google Cloud/Misc/006 Optimizing BigQuery for Cost and Performance v1.5
+++ b/Google Cloud/Misc/006 Optimizing BigQuery for Cost and Performance v1.5
@@ -531,7 +531,7 @@ First, compare the benchmark timings between each of the queries we ran.
 For the query corresponding to the table with denormalized schema, what do you notice?
 All benchmark field values were decreased
 The Bytes shuffled, Slot time consumed, and Bytes spilled to disk increased
-The Elapsed time and Slot time consumed decreased
+YES       The Elapsed time and Slot time consumed decreased
 The results were the same
 
 
@@ -553,7 +553,7 @@ The denormalized query (#2) spends the most time reading data input and outputti
 Neither query resulted in bytes spilled to disk which suggests out datasets are likely not skewed (or significantly large enough to spill out from memory from an individual worker).
 Note: The queries used in this lab are for demonstration purposes only. The time difference between the 2 queries becomes more significant as the dataset sizes increase and the complexity of the JOIN clauses increases.
 To learn more about execution details and query plan optimization, you can refer to the query plan explanation reference guide.
-
+https://cloud.google.com/bigquery/query-plan-explanation
 
 
 =================
@@ -668,14 +668,14 @@ Before joining, you should ensure the following:
 Data in the linking field has been sorted and can the relationship can only be 1-to-many
 That data can only be from a table with a relational schema
 That tables are of similar size and all data is of the same type
-You have the correct linking field and understand the relationship between the data (1-to-many, many-to-one, many-to-many)
+YES        You have the correct linking field and understand the relationship between the data (1-to-many, many-to-one, many-to-many)
 
 
 
 
 What to avoid:
 Selecting any tables with STRING data
-Selecting more columns than you need
+YES        Selecting more columns than you need
 Query datasets with no more than five tables
 Querying flattened data
 
